TCP 흐름제어와 혼잡제어

--- a/http/커넥션 관리.md
+++ b/http/커넥션 관리.md
@@ -12,7 +12,7 @@
 ### 1-1) TCP 스트림은 세그먼트로 나뉘어 IP 패킷을 통해 전송된다.
 
 - HTTP가 메시지를 전송하고자 할 경우, 현재 연결되어 있는 `TCP` 커넥션을 통해서 메시지를 순서대로 보낸다.
-- `TCP`는 `세그먼트`라는 단위로 데이터 스트림을 잘게 나누고, 세그먼트롤 `IP패킷`이라고 불리는 봉투에 담아서 인터넷을 통해 데이터를 전달한다.
+- `TCP`는 `세그먼트`라는 단위로 데이터 스트림을 잘게 나누고, 세그먼트를 `IP패킷`이라고 불리는 봉투에 담아서 인터넷을 통해 데이터를 전달한다.
 
 
 
@@ -54,10 +54,10 @@
 - 인터넷 자체가 패킷 전송을 완벽히 보장하지는 않기 때문에 TCP는 성공적인 데이터 전송을 보장하기 위해서 자체적인 확인 체계를 가진다.
 - 각 세그먼트의 수신자는 세그먼트를 온전히 받으면 작은 확인 응답 패킷(`ACK`)를 송신자에게 반환한다.
 - 만약, 송신자가 특정시간(`RTO`) 동안  확인 응답 패킷(`ACK`)를 받지 못하면, 패킷이 파기되었거나 오류가 있는 것으로 판단하고 데이터를 다시 전송한다(`Stop-And-Wait 방식`).
-- 확인 응답 패킷(`ACK`)는 그 크기가 작기 때문에 같은 방향으로 보내는 데이터에 확인응답을 편승(`piggyback`)시킨다.
+- 확인 응답 패킷(`ACK`)는 그 크기가 작기 때문에 같은 방향으로 보내는 데이터에 확인응답을 **편승(`piggyback`)시킨다.**
 
 - **`확인 응답 지연`은 송출할 확인 응답을 특정 시간동안 버퍼에 저장해두고, 확인 응답을 편승시키기 위한 송출 데이터 패킷을 찾는다.**
-- **막상 편승할 패킷을 찾으려고하면 해당 방향으로 송출되는 패킷이 많지 않기 때문에, 확인 응답 지연 알고리즘으로 인한 지연이 자주 발생한다.**
+- 막상 편승할 패킷을 찾으려고하면 해당 방향으로 송출되는 패킷이 많지 않기 때문에, **확인 응답 지연 알고리즘으로 인한 지연이 자주 발생한다.**
 
 
 
@@ -85,7 +85,7 @@
 ### 2-4) 네이글(Naggle) 알고리즘과 TCP_NODELAY
 
 - TCP 세그먼트는 40바이트 상당의 플래그와 헤더를 포함하여 전송하기 때문에, TCP가 작은 크기의 데이터를 보낸다면 그 만큼 네트워크의 성능은 떨어지게 된다.
-- 네이글 알고리즘은 세그먼트가 최대 크기가 되지 않으면 전송을 하지 않지만 다른 모든 패킷들이 확인 응답을 받았다면 전송을 허락한다.
+- 네이글 알고리즘은 **세그먼트가 최대 크기가 되지 않으면 전송을 하지 않지만** 다른 모든 패킷들이 확인 응답을 받았다면 전송을 허락한다.
 
 ### * 네이글 알고리즘의 문제점
 
@@ -118,4 +118,36 @@
 
 ### 3-2) 지속 커넥션
 
-- 
+- `클라이언트`는 하나의 웹 페이지에서 여러 개의 커넥션을 맺는 경향이 있다. 웹 페이지에 첨부된 이미지들은 대부분 같은 웹 사이트에 있고, 상당수의 하이퍼링크도 같은 사이트를 가리키는 경우가 많기 때문이다.
+- 따라서, 처리가 완료된 후에도 TCP 커넥션을 유지하여 앞으로 있을 HTTP 요청에 재사용될 수 있다.
+- `지속 커넥션`은 클라이언트나 서버가 커넥션을 끊기 전까지는 트랜잭션 간에도 커넥션을 유지한다.
+- 해당 서버에 이미 맺어져 있는 지속 커넥션을 재사용함으로써, 커넥션을 맺는데 소요되는 시간을 절약할 수 있다.
+
+
+
+### 병렬 커넥션 VS 지속 커넥션
+
+- 병렬 커넥션은 다음과 같은 몇 가지 단점이 있다.
+
+1. 각 트랜잭션마다 새로운 커넥션을 맺고 끊기 때문에 시간과 대역폭이 소모된다.
+2. 각각의 새로운 커넥션은 TCP의 Slow Start때문에 성능이 떨어진다.
+3. 실제로 연결할 수 있는 병렬 커넥션의 수에는 제한이 있다.
+
+
+
+- 지속 커넥션은 다음과 같은 몇 가지 장점이 있다.
+
+1. 커넥션을 맺기 위한 사전 작업과 지연을 줄여준다.
+2. 튜닝된 커넥션을 유지한다.
+3. 커넥션의 수를 줄여준다.
+
+**# 그러나, 지속 커넥션을 잘못 관리할 경우, 계속 연결된 상태로 있는 수 많은 커넥션이 쌓여 성능이 저하될 수 있다.**
+
+
+
+### 3-3) Keep-Alive 커넥션
+
+- 클라이언트는 keep-alive 커넥션을 유지하기 위해서 요청에 `Connection:Keep-Alive`헤더를 포함시킨다.
+- 이 요청을 받은 서버는 그다음 요청도 이 커넥션을 통해 받고자 한다면 응답 메시지에 같은 헤더를 포함시킨다.
+- 만약, 서버가 `Connection:keep-alive` 헤더를 포함시키지 않았다면 클라이언트는 서버가 keep-alive를 지원하지 않으며 응답 메시지가 전송되고 나면 서버 커넥션을 끊을 것이라고 추정한다.
+
