프로세스 동기화

--- a/운영체제/프로세스 관리.md
+++ b/운영체제/프로세스 관리.md
@@ -63,3 +63,9 @@
 
 [Swap 영역 참고](https://spr2ad.tistory.com/130)
 
+
+
+#### 5. 문맥 교환
+
+- 프로세스 `P1`이 CPU를 점유하고 있다가, 프로세스 `P2`가 CPU를 점유하는 과정에서 발생하는 과정(?)이다.
+- `P1`의 현재 상태를 PCB1에 저장하고, 프로세스 `P2`를 실행하기 위해 PCB2에 있는 값들을 CPU에 Restore하는 과정을 `Distpatcher`라고 한다.
