--- a/운영체제/스케줄링.md
+++ b/운영체제/스케줄링.md
@@ -86,10 +86,11 @@
 
 #### 2.4 Multilevel Feedback Queue
 
-- 모든 프로세스는 하나의 입구로 진입한다.
-- 만약 첫 번째 큐의 시간 할당량을 모두 쓰면 (채우면) 다음 큐로 이동시킨다.
+- 어떤 프로세스가 CPU 시간을 너무 많이 사용하면, 낮은 우선순위의 큐로 이동된다.
 
+- 마찬가지로, 낮은 우선순위의 큐에서 너무 오래 대기하는 프로세스는 높은 우선순위를 가진 큐로 이동되어 `기아 현상`을 예방한다.
 
+  
 
 ### 3. 비선점 스케줄링
 
