운영체제 메모리 관리기법

--- a/운영체제/정리/프로세스.md
+++ b/운영체제/정리/프로세스.md
@@ -9,12 +9,21 @@
 
 - 프로세스는 `상태`는 현재의 활동에 따라 정의된다.
 
-![](https://t1.daumcdn.net/cfile/tistory/2462574058F328DE29)
+![](../자료/프로세스상태도.png)
 
-1. new : 프로세스가 생성 중인 상태이다.
-2. ready : 프로세스가 CPU에 할당되기를 기다리는 상태이다.
-3. running : 프로세스가 CPU에 할당되어 `명령어`를 실행하고 있는 상태이다.
-4. waiting : 프로세스가 어떤 사건(입출력 등)의 처리를 기다리고 있는 상태이다.
+1. created
+   - 프로그램이 실행되기 위해서 커널에 등록되어 프로세스가 된 상태이다.
+   - `created` 상태에서 프로세스는 메모리의 가용 공간에 따라 `ready` 상태와 `suspended ready` 상태로 바뀐다.
+2. ready
+   - 메모리 가용 공간이 충분하여 `ready`상태로 바뀌게 되면, CPU에 할당받기를 기다리는 상태이다.
+3. running : 
+   - 프로세스가 CPU를 할당받아 명령어를 처리하는 상태를 말한다.
+   - 이때, `ready => running` 상태로 바뀌는 것을 `dispatch`라고 한다.
+   - `running` 상태에서 다른 프로세스에 의해 CPU 선점을 뺏기게 되면 `ready`상태로 변하게 되고, 입출력과 같은 처리를 위해 대기하는 상태를 `asleep` 상태라고 한다.
+4. asleep:
+   - 프로세스가 어떤 사건(입출력 등)의 처리를 기다리고 있는 상태이다.
+   - 이 과정을 `sleep 혹은 block` 되었다고 한다.
+   - `asleep` 상태에서 바로 `running` 상태로 바뀔 수 없고, `wakeup`을 통해 먼저 `ready` 상태로 변해야한다.
 5. terminated : 프로세스의 실행이 종료된 상태이다.
 
 
