--- a/운영체제/정리/메모리관리전략.md
+++ b/운영체제/정리/메모리관리전략.md
@@ -133,5 +133,78 @@
 
 - 단편화로 인해 분산된 메모리 공간을 하나로 합치는 기법이다.
 - 즉, 프로세스에 할당된 메모리 공간을 한 군데로 몰고, 가용 가능한 공간들은 다른 한 군데로 몰아서 큰 블록을 만드는 것이다.
-
 - 단, `메모리 압축` 방식은 모든 프로세스를 재배치해야 하기 때문에 모든 프로세스의 작업이 중단되고, 많은 시스템 자원을 소비한다.
+
+---
+
+### 8. 비연속 메모리 할당 (Non-Contiguous Memory Allocation)
+
+- `연속 메모리 할당`방식으로 발생하는 `단편화` 문제를 해결하기 위해 사용하는 기법이다.
+- 실행 시, 필요한 `block`들만 메모리에 적재하고 나머지 `block`들은 `swap device`에 존재하게 된다.
+- 이러한 기법에는 `페이징`, `세그먼트` 기법이 있다.
+
+---
+
+### 9. 페이징 (Paging)
+
+- `페이징`이란 프로세스와 메인 메모리를 같은 크기의 일정한 단위로 쪼개어 메모리를 할당하는 방식이다.
+- 일정한 크기로 나뉜 프로세스를 `페이지`라고 하며, 일정한 크기로 나뉜 메모리를 `프레임`이라고 한다.
+- 즉, 각각의 `페이지`에 할당될 `프레임`의 크기가 같기 때문에 `외부 단편화`는 발생하지 않는다.
+- 하지만, 프로세스의 크기가 `페이지`의 크기의 배수가 아니라면, 프로세스의 `마지막 페이지`는 내부 단편화가 발생한다. `(내부 단편화의 최대 크기 = 페이지의 크기 - 1)`
+
+
+
+#### 페이징을 활용한 비연속 메모리 할당 과정
+
+![](../자료/페이지직접매핑.png)
+
+1. CPU가 생산하는 `논리 주소는 하위 n비트와 상위 m-n비트`로 구성된다.
+   1. `상위 m-n`비트는 페이지 번호를 엑세스할 때 사용된다. `페이지 테이블`은 각 페이지가 점유하는 주소 `(몇 번째 프레임)` 을 가지고 있다.
+   2. `하위 n비트`는 페이지 오프셋을 나타내는데, 실제 물리 메모리 주소는 `페이지 주소 + 변위`를 더한 값이 된다.
+2. CPU가 생산하는 논리주소로부터 `페이지 번호` 를 계산하여 `페이지 테이블`을 참조한다.
+   1. `페이지 테이블`에 해당 `페이지 번호`가 존재하지 않으면 (page fault 혹은 miss) `swap device`에서 해당 `페이지`를 메모리로 적재시킨 후, `페이지 테이블`을 갱신한다.
+   2. `페이지 테이블`에 해당 `페이지 번호`가 존재하면 그와 매핑된 `프레임 번호`를 반환한다.
+3. `프레임 번호`와 `변위 값`을 통해 실제 메모리에 접근한다.
+
+---
+
+### 10. Page Mapping Table (PMT) 의 종류
+
+- 각 운영체제는 `PMT`를 저장하기 위한 고유의 방법을 가지고 있다.
+- 몇몇 OS는 프로세스마다 하나의 `PMT`를 할당한다. 디스패처가 어떤 프로세스를 시작시킬 때, 사용자 레지스터를 적재하는 과정에서 사용자 `PMT`로부터 하드웨어 페이지 테이블 값을 복원한다.
+
+
+
+#### 1. 레지스터를 활용한 구현
+
+- `PMT`를 레지스터로 구현하는 방법으로써 `논리주소 => 물리주소` 변환 과정이 매우 빠른 것이 특징이다. 
+- 하지만, 일반적으로 `PMT`의 크기는 1백만 항목에 이를 만큼 매우 크므로, 레지스터로 구현하는 것은 매우 부적절하다.
+
+
+
+#### 2. 메인 메모리를 활용한 구현
+
+- `레지스터`를 활용한 방법 대신, 대부분의 컴퓨터는 `PMT`를 메인 메모리에 저장하는 방식을 채택한다.
+- `PMT`를 메인 메모리에 저장하고 `PTBR (Page Table Base Register)` 로 하여금 `PMT`를 가리키도록 한다. 다른 `PMT`를 사용하려면 `PTBR` 값만 변화시키면 된다.
+- 이 방식의 문제점은 메모리 접근 시간이다. 만약 임의의 주소 a 에 접근하기 위해서는 `PTBR`을 통해 메인 메모리에 있는 `PMT`에 한 번 접근해야 하고, `PMT`를 통해 실제 물리 메모리 주소를 계산한 뒤에 접근할 수 있다.
+- 즉, 페이지 테이블을 위한 메모리 접근 한번, 그 메모리 자체를 위한 접근 한번, 총 두배의 시간이 소요된다.
+
+
+
+#### 3. TLB (Translation Look-aside Buffers)를 활용한 구현
+
+- 위의 문제를 해결하기 위해 `TLB`라고 불리는 특수항 하드웨어 캐시가 사용된다.
+- `TLB`는 페이지를 찾는 과정을 병렬로 수행하여 빠른 수행속도를 보장한다.
+- `TLB`는 `PMT`와 함꼐 사용된다. `TLB`는 `PMT`의 일부분만을 저장한다.
+- 이때, 지역성의 원칙(?)에 따라 최근에 사용한 페이지를 `TLB`에 적재한다.
+
+
+
+#### TLB를 활용한 주소 변환 과정
+
+![](../자료/페이지간접매핑.png)
+
+1. CPU가 논리주소를 생성하면 해당 페이지 번호가 TLB에 전달된다.
+   1. TLB가 병렬 수행을 통해 `페이지 번호`를 발견하면 해당 `프레임 번호`를 즉시 알 수 있다.
+   2. `페이지 번호`가 발견되지 않으면 (TLB miss 라고한다.) `PMT`에 접근하기 위해 메모리 참조가 발생한다. 이때, 새로운 `페이지 번호와 프레임 번호`를 `TLB`에 저장하여 다음 참조시에 빠르게 처리할 수 있도록 한다.
+2. TLB를 통해 얻어진 `프레임 번호`를 통해 직접 메모리를 참조한다.
