--- a/운영체제/정리/메모리관리전략.md
+++ b/운영체제/정리/메모리관리전략.md
@@ -208,3 +208,52 @@
    1. TLB가 병렬 수행을 통해 `페이지 번호`를 발견하면 해당 `프레임 번호`를 즉시 알 수 있다.
    2. `페이지 번호`가 발견되지 않으면 (TLB miss 라고한다.) `PMT`에 접근하기 위해 메모리 참조가 발생한다. 이때, 새로운 `페이지 번호와 프레임 번호`를 `TLB`에 저장하여 다음 참조시에 빠르게 처리할 수 있도록 한다.
 2. TLB를 통해 얻어진 `프레임 번호`를 통해 직접 메모리를 참조한다.
+
+---
+
+### 11. 보호(Protection)
+
+- 페이지화된 환경에서 메모리 보호는 각 페이지에 보호 비트에 의해서 수행된다.
+- `PMT`의 각각의 엔트리에는 `읽기, 쓰기, 실행` 비트를 포함한다.
+- 메모리에 대한 모든 접근은 페이지 테이블을 거치므로 이때 주소 변환과 함께 `보호 비트`를 검사하여 해당 페이지에 `쓰기 혹은 실행` 이 허용되는지 안 되는지와 같은 검사를 할 수 있다.
+- 읽기 전용 페이지에 쓰기를 시도하면, 운영체제는 `트랩(trap)`을 걸어준다.
+
+![](../자료/페이지보호비트.png)
+
+- 페이지 테이블의 각 엔트리에는 `유효/무효 (v)` 비트가 하나 더 존재한다.
+- 이 비트가 `유효(valid)`로 설정되면 관련된 페이지가 메모리에 적재되어 있다는 뜻이고, `무효(invalid)`로 설정되어있으면 메모리에 적재되어 있지 않거나 프로세스의 논리 주소 공간에 속하지 않는다는 것을 나타낸다.
+
+---
+
+### 12. 공유 (Sharing)
+
+- 만약 여러 개의 프로세스가 같은 코드를 사용한다면, `공유`방법을 통해 메모리 효율성을 증대할 수 있다.
+- 각각의 프로세스는 `Code, Data, Stack 영역`을 갖게 되는데, 이 때 `Code`영역이 변하지 않는 코드라면 해당 영역을 공유 할 수 있다.
+- 단, `Code`영역이 수정되지 않는 재진입 가능 코드 `(reentrant code 또는 pure code)`여야 한다.
+
+![](../자료/메모리공유코드.png)
+
+---
+
+### 13. 세그먼테이션 (Segmentation)
+
+- `페이징 기법`이 운영체제에 의해서 메모리와 프로세스의 데이터 영역을 같은 크기로 분할했다면, `세그먼테이션` 기법에서는 그 크기를 논리적으로 분할하는 것이다.
+- 프로세스는 `Code, Data, Stack` 영역으로 이루어진 세그먼트의 집합이라고 할 수 있다.
+- 일반적으로 `세그먼트`의 크기는 같지 않기 때문에 `페이징` 기법과는 다른 점이 있다.
+- 메모리를 동적으로 나누기 때문에 `내부 단편화`는 발생하지 않는다. (VFM와 유사)
+
+![](../자료/세그먼트매핑.png)
+
+- `세그먼트 테이블`은 해당 세그먼트가 가리키는 물리 주소의 시작 번지와 세그먼트의 길이를 포함한다.
+- 시작 번지를 `base` , 길이를 `limit`이라고 한다.
+- 실제 물리 메모리를 계산하는 방법은 `페이징 시스템`과 거의 비슷하지만 `segment overflow`가 발생할 수 있다.
+- `실제 메모리 주소 = 세그먼트 시작 번지 + 변위` 이다.
+
+---
+
+### 14. 페이징 기법 vs 세그먼트 기법
+
+- `세그먼트 시스템`은 보호와 공유 부분에서 `페이징 시스템`에 비해서 용이하다.
+- 그 이유는 `세그먼트 시스템`은 프로세스를 논리적인 단위로 분할했기 때문에 하나의 세그먼트안에서 서로 성격이 다른 데이터들이 존재하지 않는다. `(Code 영역과 Data 영역이 함께 존재하지 않는다.)`
+- 그렇기 때문에, `세그먼트 시스템`이 `페이징 시스템`에 비해 공유와 보호 부분에서 용이하다.
+
