가상 메모리

--- a/운영체제/정리/메모리관리전략.md
+++ b/운영체제/정리/메모리관리전략.md
@@ -257,3 +257,49 @@
 - 그 이유는 `세그먼트 시스템`은 프로세스를 논리적인 단위로 분할했기 때문에 하나의 세그먼트안에서 서로 성격이 다른 데이터들이 존재하지 않는다. `(Code 영역과 Data 영역이 함께 존재하지 않는다.)`
 - 그렇기 때문에, `세그먼트 시스템`이 `페이징 시스템`에 비해 공유와 보호 부분에서 용이하다.
 
+---
+
+### 15. Paged Segmentation
+
+- `페이징 기법`은 외부 단편화는 발생하지 않지만, `보호와 공유`방식에서 단점이 존재한다.
+- 이에 반해, `세그먼트 기법`은 `보호와 공유`방식에서 페이징 기법보다는 우수하지만, 외부 단편화가 발생하는 문제가 있다.
+- 이 문제를 해결하기 위해서 `페이징과 세그먼트 방식`을 함께 사용할 수 있다.
+
+
+
+#### 15-1. 프로세스를 세그먼트로 분할
+
+- 프로세스의를 논리 단위인 `세그먼트`로 우선 분할한다.
+- 즉, `Code 영역, Data 영역, Stack 영역` 으로 구분함으로써 `페이징 기법`에서 발생하는 `보호와 공유`의 문제를 해결할 수 있다.
+
+
+
+#### 15-2. 세그먼트를 페이지 단위로 분할
+
+- 분할된 `세그먼트`를 다시 `페이지`단위로 분할함으로써 외부 단편화를 방지할 수 있다.
+
+
+
+#### 15-3. 주소변환 방법
+
+- `PMT와 SMT`를 모두 사용한다. 각 프로세스는 `세그먼트`로 나뉘므로 각 프로세스마다 하나의 `SMT`를 갖는다.
+- 그리고 각 세그먼트는 `페이지`로 나뉘므로 각 `세그먼트`마다 하나의 `PMT`를 갖게된다.
+
+<img src="../자료/PMTSMT.PNG" style="zoom:80%;" />
+
+- 위 그림처럼, 하나의 프로세스는 하나의 `SMT`를 갖게된다.
+- 하나의 `세그먼트`마다 하나의 `PMT`을 참조하는 필드를 갖게 된다.
+
+
+
+![](../자료/페이지세그먼트매핑.PNG)
+
+- CPU는 3개의 필드를 갖는 논리주소를 생성한다.
+- 즉, `세그먼트 번호, 페이지 번호, 변위`를 갖는다.
+-  해당 프로세스가 참조하는 `SMT`에서 `세그먼트 번호`를 통해 해당 세그먼트가 어떤 `PMT`를 참조하는 지 확인한다.
+- 해당 세그먼트가 참조하는 `PMT`에서 `페이지 번호`를 통해 해당 페이지에 접근할 수 있다.
+
+- 이 방법은 메모리에 접근하는 횟수가 세 번이므로 속도가 낮긴하지만 이 방법을 통해 얻는 이득이 더 클 수도 있다.
+
+---
+
