요구 페이징

--- a/운영체제/정리/가상메모리.md
+++ b/운영체제/정리/가상메모리.md
@@ -53,3 +53,17 @@
 
 #### 3-3. 요구 페이징의 성능
 
+1. P : 페이지 부재가 발생할 확률
+2. T<sub>m</sub> : 메모리 접근시간
+3. T<sub>p</sub> : 페이지 부재 처리시간
+4. T<sub>eff</sub> = (1-P) * T<sub>m</sub> + P * T<sub>p</sub> 으로 나타낼 수 있다.
+
+- `페이지 부재`를 처리하는 데 걸리는 시간은 아래와 같다.
+  - 디스크의 헤더가 데이터가 저장된 위치로 옮기는 시간 (seek time)
+  - 디스크가 한바퀴 도는 시간 (rotational time)
+  - 디스크로부터 데이터를 읽는 시간 (transfer time)
+
+---
+
+### 4. 페이지 교체 (Page Replacement)
+
