페이지 교체

--- a/운영체제/정리/가상메모리.md
+++ b/운영체제/정리/가상메모리.md
@@ -67,3 +67,24 @@
 
 ### 4. 페이지 교체 (Page Replacement)
 
+- 만약 빈 프레임이 없다면, 현재 사용되고 있지 않는 프레임을 찾아서 그것을 비워버린다.
+- 그 프레임의 내용을 `스왑 장치` 에 쓰고 그 페이지가 메모리에 더 이상 존재하지 않는다는 것을 알리기 위해 `페이지 테이블`을 갱신한다.
+
+
+
+#### 4-1. 페이지 교체 과정
+
+![](../자료/페이지교체.png)
+
+1. 디스크에서 필요한 페이지의 위치를 알아낸다.
+2. 빈 페이지 프레임을 찾는다
+   - 빈 프레임이 있다면 사용한다.
+   - 빈 프레임이 없다면
+     - 희생될 프레임을 선정하기 위하여 `페이지 교체 알고리즘`을 가동한다.
+     - 희생 페이지를 디스크에 기록하고 (변경된 사항을 다시 write) 관련된 페이지 테이블을 수정한다.
+3. 새로운 페이지를 프레임에 할당하고, 페이지 테이블을 갱신한다.
+4. `페이지 부재`가 발생한 지점에서부터 프로세스를 계속 실행한다.
+
+
+
+- 위의 과정에서 디스크에 접근하는 횟수가 두번임을 알 수 있다.
