--- a/운영체제/정리/프로세스 동기화.md
+++ b/운영체제/정리/프로세스 동기화.md
@@ -309,6 +309,55 @@ void signal(semaphore *S){
 
 #### 5-2-3. 생산자 - 소비자 문제
 
+- `생산자`는 데이터를 생산하고 `소비자`는 데이터를 소비하는데, 이때 `유한한 크기`의 버퍼를 사용한다.
+- `생산자`는 `버퍼`가 가득 차 있으면 대기해야하고, `소비자`는 `버퍼`가 비어있으면 대기해야한다.
+
+```c
+#define BUFFER_SIZE 10
+
+typedef struct {
+    .....
+} item;
+
+item buffer[BUFFER_SIZE];
+int in = 0;
+int out = 0;
+```
+
+- 공유 버퍼는 포인터 `in`과 `out`을 갖는 원형 배열로 구현된다. 
+- 변수 `in`은 버퍼 내에서 다음으로 비어 있는 위치를 가리키며, `out`은 버퍼 내에서 첫 번째로 차 있는 위치를 가리킨다.
+- `in == out` 일때 버퍼는 비어 있고, `(in + 1) % BUFFER_SIZE == out` 일 때, 버퍼는 가득 차있다.
+
+```c
+//생산자 코드
+item next_produced;
+
+while(true){
+	//next_produced 에 다음 번 생성되는 데이터를 저장
+    while( (in + 1) % BUFFER_SIZE == out){
+        // 버퍼가 가득 차있으므로, 아무 일도 하지 않는다.
+    }
+    buffer[in] = next_produced;
+    in = (in + 1) % BUFFER_SIZE;
+}
+
+//소비자 코드
+item next_consumed;
+
+while(true){
+    while(in == out){
+        //버퍼가 비어있으므로, 아무 일도 하지 않는다.
+    }
+    next_consumed = buffer[out];
+    out = (out + 1) % BUFFER_SIZE;
+}
+```
+
+
+
+- 세마포어를 활용한 `생산자 - 소비자 문제` 해결방법
+- 아래 예제는 1명의 생산자와 1명의 소비자 문제에 해당하는 경우이다.
+
 ```c
 // 공통변수
 int full = 0;
