--- a/운영체제/정리/가상메모리.md
+++ b/운영체제/정리/가상메모리.md
@@ -14,7 +14,7 @@
 
 ---
 
-### 3. 요구 페이징 (Demand Pagin)
+### 3. 요구 페이징 (Demand Paging)
 
 - 프로그램 실행을 시작 할 때, 프로그램의 전부를 물리 메모리에 적재하는 방법은 비효율적이다.
 - 그러므로, 해당 프로그램에서 실제 필요로 하는 부분만을 물리 메모리에 적재하는 기법을 `요구 페이징`이라고 한다.
