--- a/운영체제/정리/가상메모리.md
+++ b/운영체제/정리/가상메모리.md
@@ -88,3 +88,5 @@
 
 
 - 위의 과정에서 디스크에 접근하는 횟수가 두번임을 알 수 있다.
+- 이러한 오버헤드를 피하기 위해 `변경 비트(modify bit or dirty bit)`라고 하는 비트를 사용해서 감소시킬 수 있다. CPU내의 페이지가 수정이 발생하면 `변경 비트`를 설정한다.
+- `희생 페이지`를 선택한 뒤, `예비 저장장치`로 내보내기 전에 `변경 비트`를 확인하여 수정이 발생했으면 디스크에 다시 저장한다.
