--- a/운영체제/정리/가상메모리.md
+++ b/운영체제/정리/가상메모리.md
@@ -49,6 +49,12 @@
 - 이 과정에서는 프로세스가 필요로 하는 모든 페이지가 적재될 때 까지 `페이지 부재`가 발생하게 된다.
 - 필요한 페이지가 모두 적재되고 나면, 그 다음부터는 `페이지 부재`가 발생하지 않는데, 이것을 `순수 요구 페이징 (Pure Demand Pagin)` 이라고 한다.
 
+#### * 페이지 부재와 프레임의 관계
+
+- `페이지 부재` 횟수를 알고자 한다면, `페이지 교체 알고리즘`외에도 `프레임의 수`를 알 필요가 있다.
+- `프레임의 수`가 커질수록 `페이지 부재` 횟수도 줄어드는 것이 일반적이다.
+- 그러나, `Belady 모순`을 통해 알 수 있듯이 프레임의 수를 증가시키더라도 페이지 부재 횟수가 더 높아지는 경우도 존재한다.
+
 
 
 #### 3-3. 요구 페이징의 성능
@@ -88,3 +94,86 @@
 
 
 - 위의 과정에서 디스크에 접근하는 횟수가 두번임을 알 수 있다.
+
+---
+
+### 5. 참조열 (Reference String)
+
+- 페이지 p에 대한 참조가 발생하면, 직후에 p에 접근하는 모든 참조는 `페이지 부재`를 발생시키지 않는다.
+- 따라서, CPU가 생성하는 논리주소(페이지 단위)에 따라 `페이지 부재`가 발생하는 부분은 생략하여 표시하는 방법을 `Reference String`이라고 한다.
+
+#### 문제) 페이지 크기가 100바이트 일 때, 다음 메모리 주소를 `참조 열`로 변환하라.
+
+- 0100, 0432, 0101, 0612, 0102, 0103, 0104, 0101, 0611, 0102, 0103, 0104, 0101, 0610, 0102, 0103, 0104, 0101, 0609, 0102, 0105
+- 답) 1 4 1 6 1 6 1 6 1 6 1
+
+---
+
+### 6. 페이지 교체 알고리즘 
+
+- 다음과 같은 `참조열 (Reference String)`이 있다고 가정한다.
+- `7, 0, 1, 2, 0, 3, 0, 4, 2, 3, 0 ,3, 2, 1, 2, 0, 1, 7, 0, 1`
+
+
+
+#### 6-1. FIFO 페이지 교체
+
+- `FIFO 알고리즘`은 어떤 페이지를 교체할 때, 메모리에 올라온 지가 가장 오래된 페이지를 내쫓는 방법이다.
+- 페이지가 올라온 시간을 기억해도 되고, 페이지들이 올라온 순서로 큐를 만들어가지고 있어도 된다.
+- 아래는 `프레임`이 3개일 때, `FIFO 알고리즘`을 적용한 예시이다.
+
+![](https://t1.daumcdn.net/cfile/tistory/256403335916A03E18)
+
+- `FIFO 알고리즘`은 이해하기도 쉽고, 프로그래밍하기도 쉽지만 성능이 좋은 편은 아니다.
+- `FIFO 알고리즘`에서는 프레임의 수를 증가시켰음에도 불구하고 `페이지 부재` 횟수가 증가하는 `Belady 모순`이 발생하기도 한다.
+
+
+
+#### 6-2. 최적 페이지 교체 (Optimal Page Replacement)
+
+- `OPT 알고리즘`은 앞으로 가장 오랫 동안 사용되지 않을 페이지를 찾아 교체하는 알고리즘이다.
+- 이 방법은 모든 알고리즘보다 낮은 `페이지 부재율`을 보이며 `Belady 모순`이 발생하지 않는다.
+
+![](https://t1.daumcdn.net/cfile/tistory/265B26335916A03F39)
+
+- 그러나, 이 알고리즘은 미래에 실행될 프로세스가 어떻게 메모리를 참조할 것인지 미리 알아야 하기 때문에 구현이 불가능하다는 단점이 있다.
+- 단, `OPT 알고리즘`은 다른 어떤 페이지 알고리즘보다도 성능이 좋으므로, 다른 알고리즘의 성능을 평가할 때 사용된다.
+
+
+
+#### 6-3. LRU 페이지 교체 (Least-Recently-Used Page Replacement)
+
+- `OPT 알고리즘`과 같이 미래를 예상할 수 없다면, 과거의 기록(?)을 통해 미래에 대한 근사치를 추정함으로써 최적에 근사한 알고리즘을 구현할 수 있다.
+- `LRU 알고리즘`은 최근에 사용되지 않은, 즉 가장 오랜 시간동안 참조되지 않은 페이지를 찾아 교체하는 알고리즘이다.
+- 과거에도 사용되지 않았다면, 앞으로도 사용되지 않을 확률이 높다고 생각하는 것이다.
+- `LRU 알고리즘`은 각 페이지마다 마지막으로 참조된 시간을 유지한다.
+
+![](https://t1.daumcdn.net/cfile/tistory/2724AE335916A04007)
+
+- Loop 실행에 필요한 크기보다 작은 수의 페이지 프레임이 할당된 경우 `페이지 부재율`이 급격히 증가한다. 예를 들어, 프레임의 크기는 3이고, Loop 실행에서 참조하는 페이지의 크기가 4인 경우가 그렇다.
+- `LRU 알고리즘`을 구현하기 위해서는 프레임들을 최근 사용된 시간 순서로 파악할 수 있어야 하는데 이를 위해서는 하드웨어의 지원이 필요하다.
+
+
+
+1. 계수기 (Counters)
+   - 각 페이지 항목마다 사용 시간 필드를 추가하여, 페이지에 대한 참조가 발생할 때 마다 페이지의 사용시간 필드에 시간 레지스터의 값을 복사한다.
+   - 시간 값이 가장 작은 페이지가 교체된다.
+   - 이 기법은 LRU 페이지를 찾기 위해서 `페이지 테이블`을 탐색하여야 하며 매 메모리 참조시마다 메모리 쓰기 작업을 필요로 한다.
+2. 스택 (Stack)
+   - 페이지 번호의 스택을 유지하는 방법이다. 페이지가 참조될 때 마다 페이지 번호는 스택 중간에서 제거되어 스택의 Top에 놓이게 된다.
+   - 이런 방식으로하면 스택의 Top은 항상 최근에 참조된 페이지이고, 스택의 Bottom은 가장 오랫동안 이용되지 않은 페이지이다.
+   - 스택은 보통 `Doubly Linked List`로 구현된다. 
+
+
+
+#### 6-4. LFU 페이지 교체 (Least Frequently Used)
+
+- `LFU 알고리즘`은 참조 회수가 가장 적은 페이지를 교체하는 방법이다.
+- 이 알고리즘은 참조된 횟수가 많은 페이지일수록 앞으로도 참조될 가능성이 높다고 가정하는 것이다.
+- 그러나, 어떤 프로세스가 임의의 페이지 P에 대해서 초기 단계에 집중적으로 참조한 이후에 다시는 그 페이지를 사용하지 않게 된다면, P페이지는 계속해서 메모리에 상주하게 된다.
+- 이 문제를 해결하기 위한 방법은, 참조 횟수를 일정한 시간마다 오른쪽으로 시프트해서 그 수를 감소시키는 방법이 있다.
+
+#### 6-5. MFU 페이지 교체 (Most Frequently Used)
+
+- `MFU 알고리즘`은 가장 적은 참조 횟수를 가진 페이지가 가장 최근에 참조되었고 앞으로도 사용될 것이라는 판단에 근거한 방법이다.
+
