--- a/운영체제/정리/가상메모리.md
+++ b/운영체제/정리/가상메모리.md
@@ -109,7 +109,7 @@
 
 ------
 
-### 6. 페이지 교체 알고리즘 
+### 6. 정적 페이지 교체 알고리즘 (Fixed Allocation)
 
 - 다음과 같은 `참조열 (Reference String)`이 있다고 가정한다.
 - `7, 0, 1, 2, 0, 3, 0, 4, 2, 3, 0 ,3, 2, 1, 2, 0, 1, 7, 0, 1`
@@ -178,3 +178,65 @@
 - `MFU 알고리즘`은 가장 적은 참조 횟수를 가진 페이지가 가장 최근에 참조되었고 앞으로도 사용될 것이라는 판단에 근거한 방법이다.
 - 이러한 오버헤드를 피하기 위해 `변경 비트(modify bit or dirty bit)`라고 하는 비트를 사용해서 감소시킬 수 있다. CPU내의 페이지가 수정이 발생하면 `변경 비트`를 설정한다.
 - `희생 페이지`를 선택한 뒤, `예비 저장장치`로 내보내기 전에 `변경 비트`를 확인하여 수정이 발생했으면 디스크에 다시 저장한다.
+
+---
+
+### 7. 프레임 할당
+
+- 물리 메모리에 가용 프레임을 각 프로세스들에게 어떻게 할당하는지에 따라서 성능이 좌우된다.
+
+#### 7-1. 할당 알고리즘
+
+1. 균등 할당 (Equal allocation)
+   - `균등 할당` 방식은 모든 프로세스들에게 똑같은 수의 프레임을 할당하는 것이다.
+2. 비례 할당 (Proportional allocation)
+   - 각 프로세스들의 크기가 다르다는 점을 고려하여, 각 프로세스의 크기 비율에 맞추어 할당하는 방법이다.
+
+#### 7-2. 전역 대 지역 할당 (Global Versus Local Allocation)
+
+- 다수의 프로세스가 프레임 할당을 위해 경쟁하는 환경에서 페이지 교체 알고리즘은 크게 두 가지 범주, `전역 교체 (global replacement)`와 `지역 교체(local replacement)`로 나눌 수 있다.
+
+1. 전역 교체
+   - `전역 교체` 방식은 프로세스가 교체할 프레임을 다른 프로세스에 속한 프레임을 포함한 모든 프레임에서 교체할 프레임을 찾는 방식이다.
+   - `전역 교체` 방식에서는 해당 프로세스보다 우선순위가 낮은 프로세스들의 프레임을 뺏어올 수 있기 때문에, 해당 프로세스에 할당된 프레임의 수는 계속해서 변할 수 있다.
+   - 즉, `전역 교체` 방식은 어떤 프로세스들과 함께 실행되느냐에 따라서 페이지 수가 변하기 때문에 그 자신의 `페이지 부재율`을 조절할 수 없다.
+2. 지역 교체
+   - `지역 교체` 방식은 각 프로세스가 자기에게 할당된 프레임들 중에서만 교체될 페이지를 찾는 방식이다.
+   - `지역 교체` 방식에서는 프로세스에 할당된 프레임 수가 변하지 않지만, 잘 안쓰는 페이지 프레임이 있더라도 그것을 그대로 낭비할 수 있다.
+
+---
+
+### 8. 쓰레싱 (Thrashing)
+
+- 운영체제는 CPU의 이용률을 검사하여 CPU 이용률이 너무 낮아지면 새로운 프로세스를 시스템에 더 추가해서 다중 프로그래밍의 정도를 높인다.
+- 처음에는 다중 프로그래밍의 정도가 높아짐에 따라 `CPU 이용률`도 함께 증가하지만, 프로세스가 많아질 수록 `페이지 부재율`은 높아질 것이다.
+- 이로 인해, 실제로 프로세스가 실행되는 시간보다 페이지 교체를 기다리기 위한 시간 (Swaping에 필요한) 이 더 커지게 되는데, 이러한 상황에서 `준비 완료 큐`는 비어있게 되어 CPU 이용률은 더 낮아지게 된다.
+- CPU 이용률이 낮아질 수록, 운영체제는 다중 프로그래밍 정도를 더욱 높이려고 할 것이고 결국에는 어떤 프로세스도 실행될 수 없는 상황에 직면하게 된다.
+
+![](https://t1.daumcdn.net/cfile/tistory/24388A4057188EAD38)
+
+---
+
+### 10. 가변 페이지 교체 알고리즘 (Variable Allocation)
+
+- 각 프로세스에 할당되는 프레임의 수를 가변적으로 제공하는 방식이다.
+
+#### 10-1. 작업 집합 모델 (Working-Set Model)
+
+- `작업 집합 모델`은 지역성을 토대로 하고 있다.
+- 프로세스가 특정 시점에 자주 참조하는 페이지들의 집합, 최근 일정시간(△) 참조된 페이지들의 집합을 살펴본다.
+
+![](http://blog.skby.net/blog/wp-content/uploads/2019/04/1-37.png)
+
+- 즉, `작업 집합` 의 크기가 해당 프로세스에 할당되는 프레임의 크기이다.
+- Window size(△) 값이 성능을 결정 짓는 중요한 요소이다.
+
+
+
+#### 10-2. 페이지 부재 빈도 (PFF, Page-Fault Frequency)
+
+- `페이지 부재율`이 너무 높으면, 그 프로세스가 더 많은 프레임을 요구한다는 뜻이고, `페이지 부재율`이 너무 낮으면, 그 프로세스에 너무 많은 프레임이 할당되어 있다는 뜻이다.
+- 따라서, `페이지 부재율`의 상한선과 하한선을 정해놓고 만약 `페이지 부재율`이 상한선을 넘으면 그 프로세스에 프레임을 더 할당하고, 하한선을 넘으면 그 프로세스의 프레임 수를 줄인다.
+
+![](http://blog.skby.net/blog/wp-content/uploads/2019/04/1-38.png)
+
