--- a/운영체제/정리/프로세스.md
+++ b/운영체제/정리/프로세스.md
@@ -101,7 +101,7 @@
 1. 독립 프로세스 (Independent Process)
    - 다른 프로세스에 영향을 끼치지도 받지도 않는 프로세스를 말한다.
 2. 협력 프로세스 (Cooperating Process)
-   - 다른 프로레스와 영향을 주고 받으며 `자원`을 공유하는 프로세스를 말한다.
+   - 다른 프로세스와 영향을 주고 받으며 `자원`을 공유하는 프로세스를 말한다.
 
 
 
@@ -111,7 +111,7 @@
 - 즉, `협력 프로세스` 간의 통신을 위해 커널이 제공하는 여러가지의 `IPC` 설비를 이용한다.
 - **기본적으로, 서로 다른 프로세스간의 메모리 접근이 막혀있기 때문에 `IPC`가 필요하다라고 생각하면 될 것 같다.**
 
-
+d
 
 ### 2-2. 메시지 전달(Messaging Passing) vs 공유 메모리(Shared Memory)
 
