--- a/운영체제/정리/메모리관리전략.md
+++ b/운영체제/정리/메모리관리전략.md
@@ -10,7 +10,7 @@
 ### 1. 주소의 할당 (Address Binding)
 
 - 프로그램은 실행 파일 형태로 디스크에 저장되어 있는데, 이 프로그램이 실행되기 위해서는 메인 메모리에 적재되어 `프로세스`가 되어야 한다.
-- 디스크에서 메인 메모리로 들어오기를 기다리고 있는 프로세스들의 집합을 이른바 `입력 큐(input queue)`라고 부른다.
+- 디스크에서 메인 메모리로 적재되기를 기다리고 있는 프로세스들의 집합을 이른바 `입력 큐(input queue)`라고 부른다.
 - 또한, 프로그램의 논리 주소를 실제 메모리의 물리 주소로 매핑하는 작업을 `주소의 할당`이라고 할 수 있다.
 
 ![](../자료/주소바인딩.PNG)
@@ -97,7 +97,7 @@
 
 - 메모리를 고정된 크기로 미리 분할하는 방법이다.
 - 각 분할 (partition) 마다 하나의 프로세스를 갖기 때문에 분할의 갯수를 다중 프로그래밍의 정도라고 부른다.
-- 이 기법은 `단편화`가 발생하여 메모리 자원이 낭비될 수 있다.
+- 분할영역보다 크기가 작은 프로세스의 경우에는 `내부 단편화`가 발생하고, 분할영역보다 크기가 큰 프로세스의 경우에는 `외부 단편화`가 발생한다.
 
 
 
@@ -193,7 +193,7 @@
 
 #### 3. TLB (Translation Look-aside Buffers)를 활용한 구현
 
-- 위의 문제를 해결하기 위해 `TLB`라고 불리는 특수항 하드웨어 캐시가 사용된다.
+- 위의 문제를 해결하기 위해 `TLB`라고 불리는 특수한 하드웨어 캐시가 사용된다.
 - `TLB`는 페이지를 찾는 과정을 병렬로 수행하여 빠른 수행속도를 보장한다.
 - `TLB`는 `PMT`와 함꼐 사용된다. `TLB`는 `PMT`의 일부분만을 저장한다.
 - 이때, 지역성의 원칙(?)에 따라 최근에 사용한 페이지를 `TLB`에 적재한다.
@@ -208,6 +208,17 @@
    1. TLB가 병렬 수행을 통해 `페이지 번호`를 발견하면 해당 `프레임 번호`를 즉시 알 수 있다.
    2. `페이지 번호`가 발견되지 않으면 (TLB miss 라고한다.) `PMT`에 접근하기 위해 메모리 참조가 발생한다. 이때, 새로운 `페이지 번호와 프레임 번호`를 `TLB`에 저장하여 다음 참조시에 빠르게 처리할 수 있도록 한다.
 2. TLB를 통해 얻어진 `프레임 번호`를 통해 직접 메모리를 참조한다.
+
+
+
+#### * TLB 속도(?) 계산하기
+
+1. TLB에서 검색 성공 확률을 90%라고 가정하자.
+2. TLB 검색에는 20ns가 걸리고, 메인 메모리에 접근하는데에는 100ns가 걸린다고 가정하자.
+3. 이때 TLB 속도(?)를 계산하면,
+   - **0.9 x 120(TLB 검색 시간 + 실주소 접근시간) + 0.1 x 220 (TLB 검색시간 + PMT 접근시간 + 실주소 접근시간) = 130ns가 나온다.**
+
+
 
 ---
 
@@ -246,7 +257,7 @@
 
 - `세그먼트 테이블`은 해당 세그먼트가 가리키는 물리 주소의 시작 번지와 세그먼트의 길이를 포함한다.
 - 시작 번지를 `base` , 길이를 `limit`이라고 한다.
-- 실제 물리 메모리를 계산하는 방법은 `페이징 시스템`과 거의 비슷하지만 `segment overflow`가 발생할 수 있다.
+- 실제 물리 메모리를 계산하는 방법은 `페이징 시스템`과 거의 비슷하지만 `segment overflow`가 발생할 수 있다. 왜냐하면, limit보다 논리주소의 하위비트인 변위가 더 클 경우에는 해당 세그먼트 범위를 벗어날 수 있기 때문이다.
 - `실제 메모리 주소 = 세그먼트 시작 번지 + 변위` 이다.
 
 ---
@@ -259,7 +270,7 @@
 
 ---
 
-### 15. Paged Segmentation
+### 15. Paged Segmentation 기법
 
 - `페이징 기법`은 외부 단편화는 발생하지 않지만, `보호와 공유`방식에서 단점이 존재한다.
 - 이에 반해, `세그먼트 기법`은 `보호와 공유`방식에서 페이징 기법보다는 우수하지만, 외부 단편화가 발생하는 문제가 있다.
