--- a/운영체제/정리/프로세스 동기화.md
+++ b/운영체제/정리/프로세스 동기화.md
@@ -135,7 +135,7 @@ do{
 - 어떠한 경우에도 원래의 `*value` 값을 반환하고,  `*value == expected` 일 때만 `*value`의 값이 `newValue`로 갱신한다.
 
 ```c
-void compare_and_swap(int *value, int expected, int newValue){
+int compare_and_swap(int *value, int expected, int newValue){
     int temp = *value;
     if(*value == expected)
         *value = newValue;
@@ -162,12 +162,12 @@ do{
 
 ```c++
 //아래 변수들은 false로 초기화된다.
-boolean waiting[n];
-boolean lock;
+boolean waiting[n] = {false, }
+boolean lock = false;
 
 do{
     waiting[i] = true;
-    key = true;
+    boolean key = true;
     
     while(waiting[i] && key)
         key = test_and_set(&lock);
@@ -179,7 +179,7 @@ do{
     //다음으로 임계구역에 진입하길 원하는 프로세스를 찾는다.
     j = (i + 1 ) % n;
     while((j != i) && !waiting[j])
-        j = (i + 1) % n;
+        j = (j + 1) % n;
     
     if(i == j)
         lock = false; //임계 구역에 진입할 프로세스가 없으면 lock을 해제한다.
@@ -281,25 +281,35 @@ do{
 - 다른 프로세스에 의해서 `signal` 연산이 수행되면 세마포어 큐에 있던 프로세스를 `wakeup` 연산에 의해 `준비 완료 큐`에 넣어진다.
 - 즉, `자원이 없으면` => `세마포어 큐에 저장` => `자원이 반납되면` => `wait 상태에서 ready 상태로 변경` 되는 사이클을 가지고 있다.
 
-```c
-// 프로세스가 세마포어 변수 (자원)을 기다려야 한다면 세마포어의 프로세스 리스트에 추가된다.
-typedef struct {
-    int value;
-    struct process *list;
-}semaphore;
-
-void wait(semaphore *S){
-    S->value--;
-    if(S->value < 0)
-        //해당 프로세스를 S->list에 넣는다.
-        block();
+```java
+class Process{
+    //각종 프로세스 정보
+    Process prev;
+    Process next;
 }
 
-void signal(semaphore *S){
-    S->value++;
-    if(S->value <= 0)
-        //S->list 로부터 하나의 프로세스 P를 꺼낸다.
-        wakeup(P);
+// 프로세스가 세마포어 변수 (자원)을 기다려야 한다면 세마포어의 프로세스 리스트에 추가된다.
+class Semaphore{
+    
+    int val;
+    List<Process> list = new ArrayList<>();
+    
+    public void wait(Process p){
+        this.val -= 1;
+        if(this.val < 0){
+        	//해당 프로세스를 S->list에 넣는다.
+            list.add(p);
+    		block(p);
+        }
+    }
+    public void signal(){
+        this.val += 1;
+        if(this.val <= 0){
+        	//S->list 로부터 하나의 프로세스 P를 꺼낸다.
+            Process p = this.list.get(0);
+            wakeup(p);
+        }
+    }
 }
 ```
 
@@ -423,7 +433,55 @@ do{
 
 
 
-### 6. Language-Level 해결방법 (Monitor)
+### 6. 식사하는 철학자 문제
 
-- `모니터`를 활용하여 `임계구역 문제`를 해결할 수 있다.
+```java
+int N = 5; //철학자의 수
+
+//철학자가 가질 수 있는 상태 값
+final int THINKING = 0;
+final int HUNGRY = 1;
+final int EATING = 2;
+
+int LEFT = (i + N - 1) % N;
+int RIGHT = (i + 1) % N;
+
+int mutex = 1;
+int state[N]; //n번째 철학자의 현재 상태
+int s[N]; // n번째 철학자의 세마포어 변수 값
+
+void philosopher(int i){
+    while(true){
+        think();
+        take_forks(i);
+        eat();
+        put_forks(i);
+    }
+}
+
+void test(i){
+	if(state[i] == HUNGRY && state[LEFT] != EATING && state[RIGHT] != EATING){
+        state[i] = EATING;
+        signal(&s[i]);
+    }
+}
+
+void take_forks(int i){
+    wait(&mutex); //임계구역 진입
+    state[i] = HUNGRY;
+    test(i);
+    signal(&mutex);
+    wait(&s[i]);	// s[i]가 포크를 얻지 못한 상태에서 wait을 호출하면 block된다.
+}
+
+public void put_forks(int i){
+    wait(&mutex);
+    state[i] = THINKING;
+    test(LEFT);
+    test(RIGHT);
+    signal(&mutex);
+}
+```
+
+
 
