--- a/운영체제/정리/가상메모리.md
+++ b/운영체제/정리/가상메모리.md
@@ -100,7 +100,7 @@
 ### 5. 참조열 (Reference String)
 
 - 페이지 p에 대한 참조가 발생하면, 직후에 p에 접근하는 모든 참조는 `페이지 부재`를 발생시키지 않는다.
-- 따라서, CPU가 생성하는 논리주소(페이지 단위)에 따라 `페이지 부재`가 발생하는 부분은 생략하여 표시하는 방법을 `Reference String`이라고 한다.
+- 따라서, CPU가 생성하는 논리주소(페이지 단위)에 따라 `페이지 부재`가 발생하지 않는 부분은 생략하여 표시하는 방법을 `Reference String`이라고 한다.
 
 #### 문제) 페이지 크기가 100바이트 일 때, 다음 메모리 주소를 `참조 열`로 변환하라.
 
@@ -181,18 +181,14 @@
 
 ---
 
-### 7. 프레임 할당
-
-- 물리 메모리에 가용 프레임을 각 프로세스들에게 어떻게 할당하는지에 따라서 성능이 좌우된다.
-
-#### 7-1. 할당 알고리즘
+### 7. 정적 프레임 할당 (Static Frame Allocation)
 
 1. 균등 할당 (Equal allocation)
    - `균등 할당` 방식은 모든 프로세스들에게 똑같은 수의 프레임을 할당하는 것이다.
 2. 비례 할당 (Proportional allocation)
    - 각 프로세스들의 크기가 다르다는 점을 고려하여, 각 프로세스의 크기 비율에 맞추어 할당하는 방법이다.
 
-#### 7-2. 전역 대 지역 할당 (Global Versus Local Allocation)
+#### 7-1. 전역 대 지역 할당 (Global Versus Local Allocation)
 
 - 다수의 프로세스가 프레임 할당을 위해 경쟁하는 환경에서 페이지 교체 알고리즘은 크게 두 가지 범주, `전역 교체 (global replacement)`와 `지역 교체(local replacement)`로 나눌 수 있다.
 
@@ -217,11 +213,11 @@
 
 ---
 
-### 10. 가변 페이지 교체 알고리즘 (Variable Allocation)
+### 9. 동적 프레임 할당 (Variable Frame Allocation)
 
 - 각 프로세스에 할당되는 프레임의 수를 가변적으로 제공하는 방식이다.
 
-#### 10-1. 작업 집합 모델 (Working-Set Model)
+#### 9-1. 작업 집합 모델 (Working-Set Model)
 
 - `작업 집합 모델`은 지역성을 토대로 하고 있다.
 - 프로세스가 특정 시점에 자주 참조하는 페이지들의 집합, 최근 일정시간(△) 참조된 페이지들의 집합을 살펴본다.
