--- a/운영체제/정리/가상메모리.md
+++ b/운영체제/정리/가상메모리.md
@@ -236,3 +236,11 @@
 
 ![](http://blog.skby.net/blog/wp-content/uploads/2019/04/1-38.png)
 
+---
+
+### 11. 페이지의 크기
+
+- `페이지 크기`를 감소시키는 것은 페이지의 수를 증가시키고, 결국 `페이지 테이블`의 크기를 증가시킨다.
+- 반면에, 메노리 사용 효율을 위해서는 `페이지 크기`가 작은 것이 좋다.  페이지의 크기가 크다보면, 프로세스가 사용하지 않는 영역도 메모리에 적재될 가능성이 높아진다.
+- 즉, 큰 페이지 시스템에서는 꼭 필요한 내용뿐 아니라 우연히 같은 페이지에 속한 모든 정보들도 함께 적재되므로 메모리 사용 효율이 낮아진다.
+- 그러나, `페이지 부재 횟수`를 줄이기 위해서는 `페이지 크기`가 큰 것이 좋다. `페이지 크키`가 매우 작다면 매 접근마다 모두 `페이지 부재`가 발생할 것이다.
