--- a/운영체제/정리/1. 프로세스.md
+++ b/운영체제/정리/1. 프로세스.md
@@ -59,6 +59,8 @@
 
    - `디스크`에 저장되어 있는 프로그램을 메모리로 적재시키는 일을 하는 스케줄러이다.
 
+   - 즉, 메인 메모리에 얼마나 많은 수의 프로세스를 적재시킬 것인지 결정함으로써 `다중 프로그래밍`의 정도를 결정한다.
+
    - 최선의 성능을 유지하기 위해, `입출력`과 `CPU` 중심의 프로세스를 적절하게 혼합해야한다.
 
      **- I/O Bound vs CPU Bound**
@@ -70,6 +72,8 @@
 2. **단기 스케줄러 (Short-Term Scheduler)**
 
    - `준비 완료 큐`에 저장되어 있는 프로세스들 중에서 CPU를 할당할 프로세스를 선택하는 스케줄러이다.
+   - `단기 스케줄러`는 `ready`상태로 변경할 프로세스를 선택할 뿐이지 프로세스의 상태를 running 상태로 변경시키지는 않는다.
+   - 선택된 프로세스를 running 상태로 변경하는 것은 `dispatcher`의 역할이며 `문맥 교환` 또한 `dispatcher`에 의해서 수행된다.
 
 3. **중기 스케줄러(Medium-Term Scheduler)**
 
@@ -117,7 +121,7 @@
 
 - IPC 기법에는 크게 `메시지 전달`방식과 `공유 메모리` 방식 두 가지가 있다.
 
-![](https://t1.daumcdn.net/cfile/tistory/99B096385C4C756932)
+<img src="https://t1.daumcdn.net/cfile/tistory/99B096385C4C756932" style="zoom:60%;" />
 
 
 
@@ -181,17 +185,64 @@ while(true){
 
 ### 2-2-2. 메시지 전달 (Message-Passing System)
 
-- 커널이 각 프로세스의 Memory protection을 위해 데이터를 대리 전달해주는 방식이다.
-- 따라서, 안전하고 동기화로 인한 문제가 없지만 성능이 떨어진다는 단점이 있다.
-- 그 이유는, 커널이 데이터를 전달해주는 역할을 한다는 것은 커널 내부에 데이터를 어딘가에 저장해야 한다는 뜻이며, 직접 전달하는 방식에 비해서는 느릴 수 밖에 없다.
-- 또한, 커널을 통해 데이터를 전달하기 때문에 그때마다 `시스템 콜`을 호출함으로써 `오버헤드`가 증가하게 된다.
+- `메시지 전달` 방식은 OS가 커널 내부에 메시지를 기록할 수 있는 공간 (메일 박스)를 마련해 두고, 프로세스들이 적절한 시스템 함수를 호출하여 메시지의 송수신을 OS에게 요청하는 것이다.
 
-#### Direct Communication
+- `메시지 전달` 방식은 다음과 같은 과정을 따른다.
+  - 각 프로세스 사이에 통신 링크를 설정한다.
+  - 다음의 기본적인 명령어를 활용해서 메시지를 교환한다.
+    - send(message, destination) or send(message)
+    - receive(message, host) or receive(message)
+- 각 프로세스가 송수신하는 메시지의 크기는 고정적일수도 있고 가변적일수도 있다.
+  - 메시지 길이가 고정으로 두면, OS의 처리는 간단해지지만 프로그래밍은 복잡해진다.
+  - 메시지 길이가 가변적이라면, 프로그래밍은 간단해지지만, OS의 처리는 복잡해진다.
 
-- `Direct`  방식은 커널이 직접 다른 프로세스에게 전달하는 방법이다.
+- 메시지는 크게 두 가지로 나뉘는데, `헤더와 바디`이다.
+  - `헤더`는 저장될 메시지의 타입, 출발지와 목적지 ID, 메시지 길이, 제어 정보 등을 담고 있다.
+  - `제어 정보`에는 버퍼 공간, 시퀀스 번호, 우선 순위 등이 부족한 경우 수행할 작업과 같은 정보를 포함하고 있다.
 
 
 
-#### Indirect Communication
+#### 직접 통신과 간접 통신
 
-- `Indirect` 방식은 데이터를 커널이 직접 전달하는 것이 아니라, `메일 박스`에 데이터를 저장하고 이 데이터가 필요한 프로세스가 데이터를 가져가도록 하는 방식이다.
+- **`직접 통신`** 방법에서, 통신을 원하는 각 프로세스는 송수신자의 이름을 명시해야한다.
+  - send(P, message) - 프로세스 P에게 메시지를 전송한다.
+  - receive(Q, message) - 프로세스 Q로부터 메시지를 수신한다.
+
+- 이 기법의 단점은 프로세스의 이름을 바꾸면 모든 다른 프로세시의 정의를 검사할 필요가 생긴다는 것이다.
+- 또한 `통신 연결`은 정확히 두 프로세스들 사이에만 생성되고 정확하게 하나의 연결이 존재해야한다.
+
+
+
+- **`간접 통신`**방법에서 메시지들은 `메일 박스`를 이용하여 송수신된다.
+- 각 `메일 박스`는 고유한 ID를 가지고 이 기법에서 프로세스들은 `메일 박스`를 이용해 다른 프로세스들과 통신할 수 있다.
+  - send(A, message) - 메시지를 메일박스 A로 전송한다.
+  - receive(A, message) - 메일박스 A로부터 메시지를 수신한다.
+
+- `통신 연결`은 두 개 이상의 프로세스들과 연관될 수 있으며 프로세스들 사이에는 다수의 서로 다른 연결이 존재할 수 있고, 각 연결은 하나의 `메일 박스`에 대응된다.
+
+
+
+#### 동기화
+
+- 프로세스간의 통신은 `send와 receive`를 호출하여 발생한다.
+
+1. `blocking send` - 송신 프로세스는 메시지가 수신 프로세스 또는 메일 박스에 의해 수신될 때 까지 중단된다.
+2. `non-blocking send` - 송신 프로세스는 메시지를 보내고 작업을 재시작한다.
+3. `blocking receive` - 메시지가 이용 가능할 때 까지 수신 프로세스가 중단된다.
+4. `non-blocking receive` - 수신 프로세스가 유효한 메시지 또는 null을 받는다.
+
+
+
+#### 버퍼링
+
+- 통신이 직접적이든 간접적이든 간에, 통신하는 프로세스들에 의해 교환되는 메시지는 임시 버퍼에 들어있다.
+
+1. 무용량 (zero capacity)
+   - 버퍼의 최대 길이가 0이다.
+   - 즉, 메세지는 버퍼안에서 대기할 수 없으며 송신자는 수신자가 메시지를 수신할 때 까지 기다려야한다.
+2. 유한 용량(bounded capacity)
+   - 버퍼는 유한한 길이 n을 가진다.
+   - 즉, 최대 n개의 메시지가 그안에 들어있을 수 있는데 버퍼가 가득 찼다면 메시지 송신자는 버퍼가 이용가능 할 때 까지 기다려야 한다.
+3. 무한 용량(unbounded capacity)
+   - 버퍼는 무한한 길이를 가진다.
+   - 따라서 메시지들이 얼마든지 버퍼에 저장될 수 있으며 송신자는 결코 기다리는 일이 없다.
