--- a/운영체제/정리/6. 가상메모리.md
+++ b/운영체제/정리/6. 가상메모리.md
@@ -30,6 +30,25 @@
 
 
 
+#### 페이지 크기가 작은 경우 VS 큰 경우
+
+ 1. 페이지 크기가 작은 경우	
+
+    - 페이지 크기가 `작은 경우`에는 내부 단편화의 크기 또한 작아진다.
+
+    - 페이지의 크기를 N이라고 했을 때, 해당 프로그램이 N의 배수로 나누어 떨어지지 않는다면 내부 단편화 크기의 범위는 `0 ~ (N-1)`까지의 크기를 갖게 된다.
+    - 또한, `PMT`의 크기는 커지고 `페이지 부재율` 또한 증가한다는 단점이 있다.
+    - `스왑 장치`에서 크기가 작은 페이지를 가져오는데 걸리는 `입출력`시간은 작지만 `페이지 부재`가 발생하는 횟수에 따른 `페이지 교체`의 횟수가 증가됨에 따라 전체 `입출력`시간이 증가할 수 있다.
+
+	2. 페이지 크기가 큰 경우
+
+    - 페이지 크기가 `큰 경우`에는 내부 단편화의 크기가 커지지만 `PMT`의 크기는 작아진다.
+    -  `PMT`의 크기는 작아지고 `페이지 부재율` 또한 감소한다는 장점이 있다.
+    - 페이지의 크기가 크면 `당장 필요없는 부분`도 메모리에 적재시키기 때문에 메모리 효율성이 떨어진다는 단점이 있다.
+    - 또한, `스왑 장치`에서 크기가 큰 페이지를 가져오는 데 걸리는 `입출력`시간이 오래걸린다. 
+
+
+
 #### 3-2. 페이지 부재 (Page fault)
 
 - 프로세스가 메모리에 올라와 있지 않는 페이지를 접근하려고 하는 것을 `페이지 부재`라고 한다.
@@ -178,6 +197,28 @@
 - `MFU 알고리즘`은 가장 적은 참조 횟수를 가진 페이지가 가장 최근에 참조되었고 앞으로도 사용될 것이라는 판단에 근거한 방법이다.
 - 이러한 오버헤드를 피하기 위해 `변경 비트(modify bit or dirty bit)`라고 하는 비트를 사용해서 감소시킬 수 있다. CPU내의 페이지가 수정이 발생하면 `변경 비트`를 설정한다.
 - `희생 페이지`를 선택한 뒤, `예비 저장장치`로 내보내기 전에 `변경 비트`를 확인하여 수정이 발생했으면 디스크에 다시 저장한다.
+
+#### 6-6. NUR 페이지 교체 (Not Used Recently)
+
+- 최근에 사용되지 않은 페이지를 교체하는 알고리즘으로 `LRU`와 비슷하지만, `LRU`에서 발생하는 오버헤드를 보완하기 위한 교체 알고리즘이다.
+- `NUR` 알고리즘은 최근에 사용 여부를 확인하기 위해서 각 페이지마다 두개의 비트 (참조 비트, 변형 비트) 를 사용한다.
+- 참조비트가 0이면 오래전에 호출한 것이고 1이면 최근에 호출한 것이다.
+- 변형비트가 0이면 오래전에 사용한 것이고 1이면 최근에 사용한 것이다.
+
+| 페이지 번호 | 참조(호출) 비트 | 변형(사용) 비트 |
+| ----------- | --------------- | --------------- |
+| 1           | 1               | 0               |
+| 2           | 0               | 1               |
+| 3           | 1               | 1               |
+| 4           | 0               | 0               |
+
+- 페이지 교체 순서는 `4 -> 2 -> 1 -> 3` 이다.
+
+#### 6-7. 이차 기회 교체 (Second-Chance)
+
+- 가장 오래된 페이지가 최근에 사용될 가능성이 높을 것이라는 가정하는 것이다.
+- 가장 오래된 페이지는 교체 대상에서 제외하고 나머지 페이지들 중에서 `희생`페이지를 찾는 것이다.
+- 즉, `LRU 교체 알고리즘과 FIFO 교체 알고리즘`을 함께 사용하는 방식이다.
 
 ---
 
