운영체제 수정

--- a/운영체제/정리/5. 메모리관리전략.md
+++ b/운영체제/정리/5. 메모리관리전략.md
@@ -158,7 +158,7 @@
 
 ![](../자료/페이지직접매핑.png)
 
-1. CPU가 생산하는 `논리 주소는 하위 n비트와 상위 m-n비트`로 구성된다.
+1. CPU가 생성하는 `논리 주소는 하위 n비트와 상위 m-n비트`로 구성된다.
    1. `상위 m-n`비트는 페이지 번호를 엑세스할 때 사용된다. `페이지 테이블`은 각 페이지가 점유하는 주소 `(몇 번째 프레임)` 을 가지고 있다.
    2. `하위 n비트`는 페이지 오프셋을 나타내는데, 실제 물리 메모리 주소는 `페이지 주소 + 변위`를 더한 값이 된다.
 2. CPU가 생산하는 논리주소로부터 `페이지 번호` 를 계산하여 `페이지 테이블`을 참조한다.
@@ -251,7 +251,7 @@
 - `페이징 기법`이 운영체제에 의해서 메모리와 프로세스의 데이터 영역을 같은 크기로 분할했다면, `세그먼테이션` 기법에서는 그 크기를 논리적으로 분할하는 것이다.
 - 프로세스는 `Code, Data, Stack` 영역으로 이루어진 세그먼트의 집합이라고 할 수 있다.
 - 일반적으로 `세그먼트`의 크기는 같지 않기 때문에 `페이징` 기법과는 다른 점이 있다.
-- 메모리를 동적으로 나누기 때문에 `내부 단편화`는 발생하지 않는다. (VFM와 유사)
+- 메모리를 동적으로 나누기 때문에 `내부 단편화`는 발생하지 않는다. (VFM와 유사) `외부 단편화`는 발생함.
 
 ![](../자료/세그먼트매핑.png)
 
