--- a/운영체제/정리/6. 가상메모리.md
+++ b/운영체제/정리/6. 가상메모리.md
@@ -32,7 +32,7 @@
 
 #### 페이지 크기가 작은 경우 VS 큰 경우
 
- 1. 페이지 크기가 작은 경우	
+ 1. 페이지 크기가 작은 경우
 
     - 페이지 크기가 `작은 경우`에는 내부 단편화의 크기 또한 작아진다.
 
@@ -40,14 +40,14 @@
     - 또한, `PMT`의 크기는 커지고 `페이지 부재율` 또한 증가한다는 단점이 있다.
     - `스왑 장치`에서 크기가 작은 페이지를 가져오는데 걸리는 `입출력`시간은 작지만 `페이지 부재`가 발생하는 횟수에 따른 `페이지 교체`의 횟수가 증가됨에 따라 전체 `입출력`시간이 증가할 수 있다.
 
-	2. 페이지 크기가 큰 경우
+ 2. 페이지 크기가 큰 경우
 
     - 페이지 크기가 `큰 경우`에는 내부 단편화의 크기가 커지지만 `PMT`의 크기는 작아진다.
-    -  `PMT`의 크기는 작아지고 `페이지 부재율` 또한 감소한다는 장점이 있다.
+    - `PMT`의 크기는 작아지고 `페이지 부재율` 또한 감소한다는 장점이 있다.
     - 페이지의 크기가 크면 `당장 필요없는 부분`도 메모리에 적재시키기 때문에 메모리 효율성이 떨어진다는 단점이 있다.
     - 또한, `스왑 장치`에서 크기가 큰 페이지를 가져오는 데 걸리는 `입출력`시간이 오래걸린다. 
 
-
+    
 
 #### 3-2. 페이지 부재 (Page fault)
 
@@ -102,15 +102,13 @@
 ![](C:/workspace/GitRepository/TIL/운영체제/자료/페이지교체.png)
 
 1. 디스크에서 필요한 페이지의 위치를 알아낸다.
-2. 빈 페이지 프레임을 찾는다
+2. 빈 프레임을 찾는다
    - 빈 프레임이 있다면 사용한다.
    - 빈 프레임이 없다면
      - 희생될 프레임을 선정하기 위하여 `페이지 교체 알고리즘`을 가동한다.
      - 희생 페이지를 디스크에 기록하고 (변경된 사항을 다시 write) 관련된 페이지 테이블을 수정한다.
 3. 새로운 페이지를 프레임에 할당하고, 페이지 테이블을 갱신한다.
 4. `페이지 부재`가 발생한 지점에서부터 프로세스를 계속 실행한다.
-
-
 
 - 위의 과정에서 디스크에 접근하는 횟수가 두번임을 알 수 있다.
 
@@ -121,7 +119,7 @@
 - 페이지 p에 대한 참조가 발생하면, 직후에 p에 접근하는 모든 참조는 `페이지 부재`를 발생시키지 않는다.
 - 따라서, CPU가 생성하는 논리주소(페이지 단위)에 따라 `페이지 부재`가 발생하지 않는 부분은 생략하여 표시하는 방법을 `Reference String`이라고 한다.
 
-#### 문제) 페이지 크기가 100바이트 일 때, 다음 메모리 주소를 `참조 열`로 변환하라.
+#### 문제) 페이지 크기가 100바이트 일 때, 다음 메모리 주소를 `참조열`로 변환하라.
 
 - 0100, 0432, 0101, 0612, 0102, 0103, 0104, 0101, 0611, 0102, 0103, 0104, 0101, 0610, 0102, 0103, 0104, 0101, 0609, 0102, 0105
 - 답) 1 4 1 6 1 6 1 6 1 6 1
