--- a/운영체제/정리/7. 파일 시스템 구현.md
+++ b/운영체제/정리/7. 파일 시스템 구현.md
@@ -23,7 +23,7 @@
 
 ---
 
-### 2. 할당 방법 (Allocation Methods)
+### 2. 파일 할당 방법 (Allocation Methods)
 
 - 파일들을 어떻게 디스크 공간에 배치해야 디스크 공간을 효율적으로 사용할 수 있고, 파일들에 빨리 접근할 수 있는지가 중요하다.
 - 디스크 공간을 할당하기 위해서는 세 가지 주된 방법이 있는데 그 방법은 `연속 할당, 연결 할당, 인덱스 할당`기법이 널리 사용된다.
