--- a/운영체제/정리/4. 교착상태.md
+++ b/운영체제/정리/4. 교착상태.md
@@ -1,5 +1,6 @@
 ## 1. 교착상태 (Dead Lock)이란?
 
+- `교착 상태`란 서로 상대방의 작업이 끝나기 만을 기다리고 있기 때문에 결과적으로 아무것도 완료되지 못하는 상태를 말한다.
 - 다중 프로그래밍 환경에서는 여러 프로세스들이 한정된 자원을 사용하려고 서로 경쟁할 수 있다.
 - 한 프로세스가 자원을 요청했을 때, 그 자원을 사용할 수 없는 상황이 발생할 수 있고, 그 경우 프로세스는 다시 대기 상태로 돌아간다.
 - 이처럼, 임의의 프로세스 A가 요청한 자원들이 다른 프로세스들에 이해서 점유되고 있고 그 프로세스들도 프로세스 A가 사용하는 자원을 요구할 때 발생한다.
@@ -30,16 +31,12 @@
 ## 2. 교착상태 예방 (Deadlock Prevention)
 
 - `교착 상태` 문제를 처리하는 데는 첫 번째로 교착상태 자체를 예방하는 것이다.
-- 즉, `상호 배제`, `선점 대기`, `환형 대기` , `비선점` 등과 같이 `교착 상태`의 원인이 되는 문제 자체를 부정해버리는 방법이다.
+- 즉, `상호 배제`, `보유 및 대기`, `환형 대기` , `비선점` 등과 같이 `교착 상태`의 원인이 되는 문제 자체를 부정해버리는 방법이다.
+- 그러나, 이런 방식을 사용하면 장치의 이용률과 시스템 처리율이 감소된다는 단점이 있다.
 
 
 
 ## 3. 교착상태 회피 (Deadlock Avoidance)
-
-- `교착 상태 예방` 방법은 교착 상태가 발생하기 위해 필요한 조건 중 적어도 한 가지를 부정함으로써 교착 상태를 사전에 예방하는 방법이다.
-- 그러나, 이런 방식을 사용하면 장치의 이용률과 시스템 처리율이 감소된다는 단점이 있다.
-
-
 
 ### 3-1. 안전 상태 (Safe State)란?
 
@@ -128,15 +125,15 @@
 #### 5-2 자원 선점
 
 - `자원 선점`을 이용해 교착상태를 제거하려면, 교착상태에서 벗어날 때 까지 프로세스로부터 자원을 계속적으로 선점하여 다른 프로세스에게 주어야 한다.
+- `자원 선점` 방식으로 교착 상태를 회복할 때 고려해야할 사항은 아래와 같다.
 
 1. **희생자 선택**
    - 비용을 최소화 하기 위해서 선점의 순서를 결정해야 한다. 
    - 비용 요인으로는 점유하고 있는 `자원의 수`, 해당 프로세스가 현재까지 실행하는데 `소요된 시간` 과 같은 매개변수들이 포함될 수 있다.
-   - `기아 상태`를 방지하기 위해  비용 요소에 `후퇴 횟수`를 포함시키기도 한다.
 2. **후퇴 (rollback)**
    - 프로세스를 선점하게 되면, 해당 프로세스는 정상적으로 실행할 수 없다.
    - 가장 확실한 방법은 완전 후퇴 (프로세스를 종료하는 것)이지만, 비용 절감을 위해 `교착상태`를 벗어날 수 있는 수준까지만 후퇴시키는 것이다.
 3. **기아상태**
    - `희생자 선택`이 비용 요인에 의해 적용되는 시스템에서는 계속해서 같은 프로세스가 `희생자` 로 선택될 수 있다.
    - 이 경우에, 계속해서 `희생자`로 선택되는 프로세스는 결코 자신의 작업을 완료할 수 없을 것이다.
-   - 이 문제를 방지하기 위해, `희생자 선택` 과정에서 `후퇴 횟수`를 포함시키는 방법이 있다.
+   - `기아 상태`를 방지하기 위해  비용 요소에 `선택된 횟수`를 포함시키기도 한다.
