--- a/운영체제/정리/5. 메모리관리전략.md
+++ b/운영체제/정리/5. 메모리관리전략.md
@@ -257,7 +257,7 @@
 
 - `세그먼트 테이블`은 해당 세그먼트가 가리키는 물리 주소의 시작 번지와 세그먼트의 길이를 포함한다.
 - 시작 번지를 `base` , 길이를 `limit`이라고 한다.
-- 실제 물리 메모리를 계산하는 방법은 `페이징 시스템`과 거의 비슷하지만 `segment overflow`가 발생할 수 있다. 왜냐하면, limit보다 논리주소의 하위비트인 변위가 더 클 경우에는 해당 세그먼트 범위를 벗어날 수 있기 때문이다.
+- 실제 물리 메모리를 계산하는 방법은 `페이징 시스템`과 거의 비슷하지만 `segment overflow`가 발생할 수 있다. 왜냐하면, limit보다 논리주소의 하위비트인 변위가 더 클 경우에는 해당 세그먼트 범위를 벗어날 수 있고 이때 인터럽트가 발생한다.
 - `실제 메모리 주소 = 세그먼트 시작 번지 + 변위` 이다.
 
 ---
