--- a/운영체제/정리/3. 프로세스 동기화.md
+++ b/운영체제/정리/3. 프로세스 동기화.md
@@ -75,7 +75,7 @@ do{
 
 #### 상호배제가 지켜지는가?
 
-- 프로세스 Pi가 임계구역에 들어가기 위해서는 `flag[j] == false` 이든지 `turn = i`여야만 한다.
+- 프로세스 P<sub>i</sub>가 임계구역에 들어가기 위해서는 `flag[j] == false` 이든지 `turn = i`여야만 한다.
 - turn 변수는 어느 시점에 하나의 값만 가질 수 있기 때문에, 두 프로세스가 동시에 임계구역에 진입할 수없다.
 
 
@@ -262,15 +262,16 @@ do{
    - 이 문제를 P1과 P2가 `sync = 0`라는 변수를 공유하도록 하자.
 
    ```c
+   int sync = 0;
    P1 :
-   	S1;
+   	S1();
    	signal(sync);
    
    P2 :
    	wait(sync);
-   	S2;
-   ```
-
+   	S2();
+```
+   
    - `sync`가 0으로 초기화 되어 있기 때문에, P2가 S2 명령문을 실행하기 위해서는 반드시 `sync` 값이 1이 되어야만 한다.
    - 그러기 위해서는 P1의 S1 명령어가 실행된 다음에서야 가능하므로 `S1 => S2` 명령어의 실행순서를 보장할 수 있다.
 
@@ -306,7 +307,7 @@ class Semaphore{
         this.val += 1;
         if(this.val <= 0){
         	//S->list 로부터 하나의 프로세스 P를 꺼낸다.
-            Process p = this.list.get(0);
+            Process p = this.list.remove(0);
             wakeup(p);
         }
     }
