--- a/자료구조/정리/최소비용신장트리.md
+++ b/자료구조/정리/최소비용신장트리.md
@@ -12,7 +12,7 @@
 <img src="../자료/신장트리.png" style="zoom:80%;" />
 
 - 위의 왼쪽 그래프에서 `신장트리`는 여러 개가 존재한다는 것을 알 수 있다.
-- 단, 간선들의 합이 최소인 `최소비용 신장트리`는 오른쪽 그림처럼 유일하다.
+- 단, 간선들의 합이 최소인 `최소비용 신장트리`는 오른쪽 그림처럼 유일하다. (위의 그림에서만 유일하다.)
 
 
 
@@ -42,9 +42,9 @@ MST_KRUSKAL(G, W)
 #### 시간 복잡도
 
 - 모든 간선을 오름차순으로 정렬하는데 걸리는 시간 복잡도는 O(ElogE)이다.
-- 모든 간선을 순회하는데 걸리는 시간은 O(V)이다.
+- 모든 간선을 순회하는데 걸리는 시간은 O(E)이다.
 - `Union-Find`연산을 수행하는데 걸리는 시간은 O(1)이다.
-- 즉, 크루스칼 알고리즘의 시간 복잡도는 `O(V + ElogE) → O(2E + ElogE) → O(ElogE)`이다.
+- 즉, 크루스칼 알고리즘의 시간 복잡도는 `O(E + ElogE) → O(ElogE)`이다.
 
 ---
 
@@ -62,7 +62,7 @@ MST_PRIM(G, W, s) //S는 시작 노드
         key[u] ← ∞
         π[u] ← null
     
-    V ← V U s
+    V is empty
 	key[s] ← 0
 	
     while |V| < N do
