--- a/DB/정리/1.데이터 모델링의 이해.md
+++ b/DB/정리/1.데이터 모델링의 이해.md
@@ -67,7 +67,7 @@
 
 - 현실세계에서 데이터베이스까지 만들어지는 과정은 아래 그림과 같이 시간에 따라 진행되는 과정으로서 추상화 수준에 따라, **개념적 데이터 모델, 논리적 데이터 모델, 물리적 데이터 모델**로 정리할 수 있다.
 
-![1581334348481](C:\Users\ghkvud-home\AppData\Roaming\Typora\typora-user-images\1581334348481.png)
+![](../img/1581334348481.PNG)
 
 #### 1. 개념적 데이터 모델링
 
@@ -96,7 +96,7 @@
 
 #### 2. 데이터베이스 3단계 구조
 
-![1581336935809](C:\Users\ghkvud-home\AppData\Roaming\Typora\typora-user-images\1581336935809.png)
+![](../img/1581336935809.png)
 
 1. 외부 스키마
    - 사용자와 가까운 단계로 사용자 개개인이 보는 자료에 대한 관점과 관련이 있는 부분이다.
@@ -131,7 +131,7 @@
 
 #### 2. 단수와 집합(복수)의 명명
 
-![1581337626291](C:\Users\ghkvud-home\AppData\Roaming\Typora\typora-user-images\1581337626291.png)
+![1581337626291](../img/1581337626291.png)
 
 ---
 
@@ -139,7 +139,7 @@
 
 #### 1. 데이터 모델 표기법
 
-![1581337859829](C:\Users\ghkvud-home\AppData\Roaming\Typora\typora-user-images\1581337859829.png)
+![](../img/1581337859829.png)
 
 ---
 
@@ -215,7 +215,7 @@
   - 두 개 이상의 부모 엔터티로부터 발생되고 자주 내용이 바뀌거나 데이터량이 증가된다.
   - 예를 들어, 주문 목록, 사원변경 이력 등이 될 수 있다.
 
-![1581340660380](C:\Users\ghkvud-home\AppData\Roaming\Typora\typora-user-images\1581340660380.png)
+![1581340660380](../img/1581340660380.png)
 
 #### 3. 엔터티의 명명
 
