--- a/DB/정리/1.데이터 모델링의 이해.md
+++ b/DB/정리/1.데이터 모델링의 이해.md
@@ -295,3 +295,163 @@
 
 ---
 
+### 13. 관계의 표기법
+
+#### 1. 관계의 표기법
+
+#### 가. 관계명
+
+- 관계명은 엔터티가 관계에 참여하는 형태를 지칭한다.
+- 각각의 관계는 두 개의 **관계명**을 가지고 있다.
+- 애매한 동사를 피한다.
+- 현재형으로 표현한다.
+
+#### 나. 관계차수
+
+- 두 개의 엔터티간 관계에서 참여자의 수를 표현하는 것을 관계차수라고 한다.
+- 일반적인 관계차수 표현방법은 1:N, 1:1, 1:M이다.
+
+#### 다. 관계선택사항
+
+- 엔터티의 참여 가능 여부에 따라 **필수 참여**와 **선택 참여**로 나뉜다.
+
+---
+
+### 14. 관계의 분류
+
+- 관계는 **존재에 의한 관계**와 **행위에 의한 관계**로 구분될 수 있다.
+
+![1581515851786](../img/1581515851786.png)
+
+#### 1. 존재에 의한 관계
+
+- 그림 왼쪽 편에서, 황경빈 사원은 "소속된다"라는 의미는 행위에 따른 이벤트에 의해 발생되는 의미가 아니라 단순히 DB팀에 소속되어 있기 때문에 나타나는 형태에 의해 관계가 형성되는 것이다.
+
+#### 2. 행위에 의한 관계
+
+- 그림 오른쪽 편에서, 김경재 고객은 "주문한다"라는 행위를 하여 CTA201이라는 주문번호를 생성하였다.
+- 김경재 고객이 "주문한다"라는 행위에 의해 발생되었기 때문에 두 엔터티 사이의 관계는 행위에 의한 관계가 되는 것이다.
+
+#### 3. UML에서의 관계
+
+- UML에는 클래스다이어그램의 관계중 **연관관계**와 **의존관계**가 있다.
+- **연관관계**는 항상 이용하는 관계로 **존재적 관계**에 해당하는데, 표현방법이 **실선**으로 표현된다.
+- **의존관계**는 상대방 클래스의 행위에 의해 관계가 형성될 때 표현하며, **점선**으로 표현된다.
+
+---
+
+### 15. 관계의 정의 및 읽는 방법
+
+#### 1. 관계 체크사항
+
+- 두 개의 엔터티 사이에서 관계를 정의할 때 다음 사항을 체크해 보도록한다.
+  - 두 개의 엔터티 사이에 관심있는 연관규칙이 존재하는가?
+  - 두 개의 엔터티 사이에 정보의 조합이 발생하는가?
+  - 업무기술서, 장표에 관계연결에 대한 규칙이 서술되어 있는가?
+  - 업무기술서, 장표에 관계 연결을 가능하게 하는 동사가 있는가?
+
+#### 2. 관계 읽기
+
+- 기준 엔터티를 한 개(One) 또는 각(Each)으로 읽는다.
+
+- 대상(Target) 엔터티의 관계참여도, 즉 개수(하나, 하나 이상)을 읽는다.
+- 관계선택사양과 관계명을 읽는다.
+
+![1581515451709](../img/1581515451709.png)
+
+---
+
+### 16. 식별자
+
+#### 1. 식별자
+
+- 식별자란 하나의 엔터티에 구성되어 있는 여러 개의 속성 중에 엔터티를 대표할 수 있는 속성을 의미하며 하나의 엔터티는 반드시 하나의 유일한 식별자가 존재해야 한다.
+
+
+
+#### 2. 식별자의 특징
+
+- 주식별자인지 아니면 외부식별자인지 등에 따라 특성이 다소 차이가 있다.
+
+**주식별자의 경우**
+
+- 주식별자에 의해 엔터티내의 모든 인스턴스들이 유일하게 구분되어야 한다.
+- 주식별자를 구성하는 속성의 수는 유일성을 만족하는 최소의 수가 되어야 한다.
+- 지정된 주식별자의 값은 자주 변하지 않는 것이어야 한다.
+- 주식별자가 지정이 되면 반드시 값이 들어와야 한다. (Null 안됨)
+
+**외부식별자의 경우**
+
+- 참조무결성 제약조건에 따른 특징을 갖는다.
+
+
+
+#### 3. 식별자 분류 및 표기법
+
+**1. 주식별자와 보조식별자** : 엔터티 내에서 대표성을 가지는가에 따라서
+
+**2. 내부식별자와 외부식별자** : 엔터티 내에서 스스로 생성되었는지 여부에 따라서
+
+**3. 단일식별자와 복합식별자** : 단일 속성으로 식별이 되는가에 따라서
+
+![1581517095492](../img/1581517095492.png)
+
+#### 4. 주식별자 도출기준
+
+##### 1. 해당 업무에서 자주 이용되는 속성을 주식별자로 지정하도록 함
+
+- 사원 테이블에서 **사원 번호**를 주식별자로, **주민번호**를 보조식별자로 사용할 수 있다.
+
+##### 2. 명칭, 내역 등과 같이 이름으로 기술되는 것은 피함
+
+- 명칭, 내역 등과 같이 이름으로 기술되는 것들은 가능하면 주식별자로 지정하지 않도록 한다.
+
+- 한 회사에 부서 이름이 100개가 있다고 할 때, 각각의 부서이름은 유일하게 구별될 수 있다고 하여 부서이름을 주식별자로 지정하지 않도록 한다.
+
+##### 3. 속성의 수가 많아지지 않도록 함
+
+- 주식별자로 선정하기 위한 속성이 복합으로 구성되어 주식별자가 될 수 있을 때, 가능하면 속성의 수가 많지 않도록 해야 한다.
+
+---
+
+#### 5. 식별자 관계와 비식별자 관계의 결정
+
+- 엔터티에 주식별자가 지정되고 엔터티간 관계를 연결하면 부모쪽의 주식별자를 자식엔터티의 속성으로 내려 보낸다.
+- 이때, 자식 엔터티에서 부모 엔터티로부터 받은 **외부 식별자**를 주식별자로 이용할 것인지 또는 부모와 연결이 되는 속성으로서만 이요할 것인지를 결정해야 한다.
+
+##### 1. 식별자 관계
+
+- **자식 엔터티의 주식별자로 부모의 주식별자가 상속이 되는 경우를 식별자 관계라고 지칭한다.**
+
+- 부모로부터 받은 식별자를 자식 엔터티의 주식별자로 사용하는 경우 Null 값이 오면 안되므로, 반드시 부모 엔터티가 생성되어야 자기 자신의 엔터티가 생성되는 경우이다.
+- 부모로부터 받은 속성만을 주식별자로 사용한다면 1:1 관계가 된다.
+- 부모로부터 받은 속성 이외 스스로 가지고 있는 속성을 주식별자로 사용한다면 1:M 관계가 된다.
+
+
+
+##### 2. 비식별자 관계
+
+- 부모엔터티로부터 속성을 받았지만, 자식 엔터티의 주식별자로 사용하지 않고 일반적인 속성으로만 사용하는 경우를 말한다.
+- 다음의 네 가지 경우에 비식별자 관계에 의한 외부속성을 생성한다.
+  - 부모로부터 받은 속성이 필수가 아니기 때문에, 부모없는 자식이 생성될 수 있다.
+  - 엔터티별로 데이터의 생명주기를 다르게 관리할 경우이다. 부모 엔터티 인스턴스가 먼저 소멸될 수 있는 경우가 있는데, 이때 비식별자 관계로 조정하는 것이 좋다.
+  - 여러 개의 엔터티가 하나의 엔터티로 통합되어 표현되었는데 각각의 엔터티가 별도의 관계를 가질 때 해당된다.
+  - 자식 엔터티에 주식별자로 사용해도 되지만, 자식 엔터티에서 별도의 주식별자를 생성하는 것이 더 유리하다고 판단될 때 비식별자 관계에 의한 외부식별자로 표현한다.
+
+##### 3. 식별자 관계로만 설정할 경우의 문제점
+
+- 엔터티들간의 관계가 식별자 관계로만 설정되어 있을 경우, 주식별자의 속성 수가 많아질 수 밖에 없다.
+- 자식 엔터티의 PK의 수는 부모 엔터티의 PK 수 + 1이 성립된다.
+
+
+
+##### 4. 비식별자 관계로만 설정할 경우의 문제점
+
+- 부모 유형의 속성이 상속되지 않아 데이터를 처리할 때 쓸데없이 부모엔터티까지 찾아가는 경우가 발생한다.
+
+
+
+
+
+
+
