--- a/DB/정리/1.데이터 모델링의 이해.md
+++ b/DB/정리/1.데이터 모델링의 이해.md
@@ -215,7 +215,7 @@
   - 두 개 이상의 부모 엔터티로부터 발생되고 자주 내용이 바뀌거나 데이터량이 증가된다.
   - 예를 들어, 주문 목록, 사원변경 이력 등이 될 수 있다.
 
-![1581340660380](../IMG/1581340660380.png)
+![1581340660380](../img/1581340660380.png)
 
 #### 3. 엔터티의 명명
 
