--- a/DB/정리/2. 데이터 모델의 성능.md
+++ b/DB/정리/2. 데이터 모델의 성능.md
@@ -104,3 +104,52 @@
 2. 데이터 베이스 용량을 산정한다.
 3. 대량 데이터가 처리되는 테이블에 대해서 트랜잭션 처리 패턴을 분석한다.
 4. 칼럼 단위 혹은 로우 단위로 집중화된 처리가 발생하는지 분석하여 집중화된 단위로 테이블을 분리하는 것을 검토한다.
+
+---
+
+### 6. 슈퍼타입/서브타입 모델의 성능고려 방법
+
+#### 1. 슈퍼/서브타입 데이터 모델의 변환
+
+- 논리적인 데이터 모델의 분석 단계에서 많이 쓰이는 모델이며, 물리적인 데이터 모델을 설계하는 단계에서는 슈퍼/서브타입 데이터 모델을 일정한 기준에 의해 변환을 해야한다.
+- 슈퍼/서브타입에 대한 변환을 잘못하면 성능이 저하되는 이유는 트랜잭션 특성을 고려하지 않고 설계했기 때문인데 이 경우는 다음과 같다.
+  - 트랜잭션은 항상 일괄로 처리되는데 테이블은 개별로 유지되어 Union 연산에 의해 성능이 저하된다.
+  - 트랜잭션은 항상 서브타입 개별로 처리되는데 테이블은 하나로 통합되어 있어 불필요하게 많은 양의 데이터가 집약되어 있어 성능이 저하되는 경우가 있다.
+  - 트랜잭션은 항상 슈퍼+서브 타입을 공통으로 처리하는데 개별로 유지되어 있거나 하나의 테이블로 집약되어 있어 성능이 저하되는 경우가 있다.
+
+#### 2. 슈퍼/서브 타입 데이터 모델의 변환기술
+
+- 슈퍼/서브 타입에 대해 물리적인 데이터 모델로 변환하는 세 가지 유형에 대해 세심하게 적용해야 한다.
+
+1. 개별로 발생되는 트랜잭션에 대해서는 개별 테이블로 구성
+   - 슈퍼타입 테이블인 당사자 정보를 미리 조회하고 원하는 내용을 클릭하면 서브타입인 세부적인 정보를 조회하는 방식이다.
+   - 이처럼 슈퍼/서브 타입에 독립적으로 트랜잭션이 발생되면 모두 분리하여 1:1 관계를 갖도록 한다.
+2. 슈퍼+서브 타입에 대해 발생되는 트랜잭션에 대해서는 슈퍼타입 + 서브타입 테이블로 구성
+   - 슈퍼타입과 서브타입을 묶어 트랜잭션이 발생하는 업무특징을 가지고 있을 때에는 슈퍼타입 + 각 서브타입을 하나로 묶어 별도의 테이블로 구성하는 것이 효율적이다.
+
+3. 전체를 하나로 묶어 트랜잭션이 발생할 때는 하나의 테이블로 구성
+   - 트랜잭션이 항상 여러 테이블을 통합하여 처리한다고 하면 테이블을 하나로 통합한다.
+
+![1581734467403](../img/1581734467403.png)
+
+---
+
+### 7. 인덱스 특성을 고려한 PK/FK 데이터베이스 성능향상
+
+#### 1. PK/FK 칼럼 순서와 성능개요
+
+- PK/FK 칼럼 순서와 성능개요 데이터를 조회할 때 가장 효과적으로 처리될 수 있도록 접근경로를 제공하는 오브젝트가 바로 인덱스이다.
+- 인덱스의 특징은 여러 개의 속성이 하나의 인덱스로 구성되어 있을 때 앞쪽에 위치한 속성의 값이 비교자로 있어야 인덱스가 좋은 효율을 나타낼 수 있다.
+- 앞쪽에 위치한 속성 값이 가급적 '=' 아니면 최소한 범위 'BETWEEN', '<>' 가 들어와야 인덱스를 이용할 수 있다.
+
+#### 2. PK칼럼의 순서를 조정하지 않으면 성능이 저하되는 이유
+
+- 데이터 모델링에서 엔터티를 설계하면 그에 따라  DDL이 생성되고, 생성된 DDL에 따라 인덱스가 생성된다.
+- 이 때, 인덱스는 PK 순서에 따라 생성되는데 이러한 정렬 구조로 인해 데이터를 접근하는 트랜잭션의 조건에 따라 인덱스의 접근방식이 달라지게 된다.
+
+![1581735423104](../img/1581735423104.png)
+
+- 아래와 같이 맨 앞에 있느 컬럼이 제외된 상태에서 데이터를 조회할 경우 데이터를 비교하는 범위가 매우 넓어지게되어 성능 저하를 유발한다.
+
+![1581735713518](../img/1581735713518.png)
+
