--- a/자료구조/정리/이진탐색트리.md
+++ b/자료구조/정리/이진탐색트리.md
@@ -1,7 +1,7 @@
 ### 1. 이진탐색트리란?
 
 - `이진탐색트리`란 효율적인 탐색능력은 유지하면서 빈번한 데이터 저장과 삭제가 용이하게끔 고안된 자료구조이다.
-- `이진탐색`은 탐색에 소요되는 시간 복잡도는 O(N)이지만, 데이터의 저장과 삭제가 불가능하다.
+- `이진탐색`은 탐색에 소요되는 시간 복잡도는 O(logN)이지만, 데이터의 저장과 삭제가 불가능하다.
 - `연결리스트`는 데이터의 저장과 삭제에 걸리는 시간 복잡도는 O(1)이지만, 탐색에 소요되는 시간은 O(N)이다.
 - `이진탐색트리`는 이러한 단점들을 극복하는 자료구조로써 다음과 같은 조건을 만족시킨다.
   1. 모든 키는 __유일하다.__
